--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,2 +1,50 @@
-<h1>Admin::Items#new</h1>
-<p>Find me in app/views/admin/items/new.html.erb</p>
+<div class='container'>
+  <h3>商品新規登録</h3>
+
+  <div class='row'>
+    <div class="col-sm-30 col-lg-5 px-sm-0 mx-auto">
+
+      <%= form_with model: @item, url: admin_items_path do |f| %>
+
+        <div class="form-group row mb-3">
+          <%= f.label :name, "商品画像", class: "col-sm-4 col-form-label" %>
+          <%= f.file_field :item_image,  accept: "image/*" %>
+        </div>
+
+        <div class="form-group row mb-3">
+          <%= f.label :name, "商品名", class: "col-sm-4 col-form-label" %>
+          <%= f.text_field :name, placeholder: "商品名", size: 35 %>
+        </div>
+
+        <div class="form-group row mb-3">
+          <%= f.label :name, "商品説明", class: "col-sm-4 col-form-label" %>
+          <%= f.text_area :introduction, placeholder: "ここに説明文を記述します", rows: 8, cols: 34 %>
+        </div>
+
+        <div class="form-group row mb-3">
+          <%= f.label :genre_id, "ジャンル", class: "col-sm-4 col-form-label" %>
+          <%= f.collection_select :genre_id, Genre.all, :id, :name, options = { include_blank: "--選択してください--"}, :style => "width:310px" %>
+        </div>
+
+        <div class="form-group row mb-3">
+          <%= f.label :name, "税抜価格", class: "col-sm-4 col-form-label" %>
+          <%= f.text_field :price, placeholder: 1000, size: 35 %>円
+        </div>
+
+        <div class="form-group row mb-3">
+          <%= f.label :is_active, "販売ステータス", class: "col-sm-4 col-form-label" %>
+          <%= f.radio_button :is_active, :"販売中", checked: true %>
+          <%= f.label :is_active, "販売中", value: true, class: "col-sm-3 col-form-label" %>
+          <%= f.radio_button :is_active, :"販売停止中" %>
+          <%= f.label :is_active, "販売停止中", value: false, class: "col-sm-3 col-form-label" %>
+        </div>
+
+        <div class="form-group text-center">
+          <%= f.submit '新規登録', class:"btn btn-success" %>
+        </div>
+
+      <% end %>
+
+    </div>
+  </div>
+</div>
