--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,57 @@
 
   <body>
     <header>
-      <h1>LOGO</h1>
-      <ul>
-        <li>About</li>
-        <li>商品一覧</li>
-        <li>新規登録</li>
-        <li>ログイン</li>
-      <ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <%= link_to "Nakano_Cake", admin_path, class:"navbar-brand" %>
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav ml-auto">
+            <% if admin_signed_in? %>
+              <li>
+                <%= link_to "商品一覧",  admin_items_path, class:"nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "会員一覧",  admin_customers_path, class:"nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "注文履歴一覧",  admin_path, class:"nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "ジャンル一覧",  admin_genres_path, class:"nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "ログアウト", destroy_admin_session_path, method:"delete", class:"nav-link text-light" %>
+              </li>
+            <% elsif customer_signed_in? %>
+              <li>
+                <%= link_to "マイページ", customer_path, class:"nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "商品一覧", items_path, class:"nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "カート", cart_items_path, class:"nav-link text-light" %>
+              <li>
+                <%= link_to "ログアウト", destroy_customer_session_path, method:"delete", class:"nav-link text-light" %>
+              </li>
+            <% else %>
+              <li>
+                <%= link_to "About", admin_about_path, class:"nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "商品一覧", admin_items_path, class:"nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "新規登録", new_customer_registration_path, class:"nav-link text-light" %>
+              </li>
+              <li>
+                <%= link_to "ログイン", new_customer_session_path, class:"nav-link text-light" %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </nav>
     </header>
     <main>
     <%= yield %>
