--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,25 @@
-<h2>Sign up</h2>
+<div class ="container">
+<h5><span style="background-color: silver;">新規会員登録</span></h5>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_with model: @customer, url: customer_registration_path do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+  <table border="0" cellpadding="11" cellspacing="0" width="60%">
+    <tr><th>名前</th><td>(姓)<%= f.text_field :last_name, placeholder:"令和" %>(名)<%= f.text_field :first_name, placeholder:"道子"%></td></tr>
+    <tr><th>フリガナ</th><td>(セイ)<%= f.text_field :last_name_kana, placeholder:"レイワ" %>(メイ)<%= f.text_field :first_name_kana, placeholder:"ミチコ" %></td></tr>
+    <tr><th>メールアドレス</th><td><%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"sample@example.com" %></td></tr>
+    <tr><th>郵便番号（ハイフンなし）</th><td><%= f.text_field :postal_code, placeholder:"0000000" %></td></tr>
+    <tr><th>住所</th><td><%= f.text_field :address, placeholder:"東京都渋谷区代々木神園町０−０",size: 50 %></td></tr>
+    <tr><th>電話番号 </th><td><%= f.text_field :telephone_number, placeholder:"00000000000" %></td></tr>
+    <tr><th>パスワード（６文字以上）</th><td>
+      <% if @minimum_password_length %>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <%= f.password_field :password, autocomplete: "new-password" %></td></tr>
+    <tr><th>パスワード（確認用）</th><td><%= f.password_field :password_confirmation, autocomplete: "new-password" %></td></tr>
+  </table>
+  <%= f.submit "新規登録",class: "btn btn-success",size: 50 %>
+  <% end %>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+ <h5>すでに登録済みの方</h5>
+  <a><%= link_to "こちら",new_customer_session_path %>からログインしてね</a>
+</div>
