--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,2 +1,8 @@
-<h1>Admin::Genres#edit</h1>
-<p>Find me in app/views/admin/genres/edit.html.erb</p>
+<div class="container">
+  <h4><span style="background-color: silver;">ジャンル編集</span></h4>
+ <%= form_with model: @genre, url: admin_genre_path(@genre.id) do |f| %><br>
+<label for="inputGenre">ジャンル名</label>
+  <%= f.text_field :name, autofocus: true, id:"inputGenre" %>
+  <%= f.submit "変更を保存する" ,class: "btn btn-success" %>
+  <% end %>
+</div>
