--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,31 @@
-<h1>Admin::Homes#top</h1>
-<%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+<div class ="container">
+  <h3><span style="background-color: silver;">注文履歴一覧</span></h3>
+  
+ 
+    <table border="0" cellpadding="11" cellspacing="0" width="95%">
+    <thead style="background:lightgray">
+      <tr>
+        <th width="20%">購入日時</th>
+        <th>購入者</th>
+        <th width="20%">注文個数</th>
+        <th width="20%">注文ステータス</th>
+     </tr>
+  </thead>
+  <tbody>
+    <% @orders.each do |order| %>
+    <tr>
+      <td><%= link_to order.created_at.strftime('%Y/%m/%d %H:%M:%S'), admin_order_path(order.id) %></td>
+      <td><%= order.customer.full_name %></td>
+      <td><%= order.order_details.sum(:amount) %></td>
+      <td><%= order.status %></td>
+    </tr>
+    <% end %>
+  </tbody>
+  </table>
+ </div>
+</div>
+ <div class="d-flex align-items-center justify-content-center">
+    <div><%= paginate @orders %></div>
+  </div>
+  
+  <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
