--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,2 +1,19 @@
-<h1>Admin::Items#edit</h1>
-<p>Find me in app/views/admin/items/edit.html.erb</p>
+<div class ="container">
+  <h3><span style="background-color: silver;">商品編集</span></h3>
+  <%= form_with model: @item, url: admin_item_path do |f| %>
+  <table border="0" cellpadding="11" cellspacing="0" width="60%">
+    <tr><th>商品画像</th><td><%= f.file_field :image, placeholder: "商品画像", accept: "image/*" %></td></tr>
+    <tr><th>商品名</th><td><%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%></td></tr>
+    <tr><th>商品説明</th><td><%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", placeholder:"商品説明"%></td></tr>
+    <tr><th>ジャンル</th><td><%= f.select :genre_id, {'ケーキ':1,'プリン':2,'焼き菓子':3,'キャンディ':4},autofocus: true, id:"inputGenre", placeholder:"ジャンル"%></td></tr>
+    <tr><th>税抜価格</th><td><%= f.number_field :price, autofocus: true, id:"inputPrice", placeholder:"税抜価格"%>円</td></tr>
+    <tr><th>販売ステータス</th><td> <%= f.radio_button :is_active, '1', autofocus: true, id:"inputIs_active", placeholder:"販売ステータス"%>
+        <%= f.label :is_active, '販売中', value: 1 %>
+      
+      <%= f.radio_button :is_active, '0', autofocus: true, id:"inputIs_active", placeholder:"販売ステータス"%>
+        <%= f.label :is_active, '販売停止中', value: 0 %>
+    <%= f.submit '変更を保存', class: "btn btn-success" %></td></tr>
+  <% end %>
+  </table>
+   
+</div>
