--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,27 +1,47 @@
-<div class='container'>
-  <h3>商品一覧</h3>
-
-  <table class='table'>
-    <thead>
-       <tr class="table-secondary">
-        <th>商品ID</th>
-        <th>商品名</th>
-        <th>税抜価格</th>
-        <th>ジャンル</th>
-        <th>ステータス</th>
-      </tr>
+<div class="container">
+  <div class ="row">
+    <div class ="col-5">
+      <h3><span style="background-color: silver;">商品一覧</span></h3>
+    </div>
+    <div class ="col-7">
+      <%= link_to new_admin_item_path,class: 'nav-link text-dark' do  %>
+        <span><i class="fa-solid fa-circle-plus"></i></span>
+      <% end %>
+    </div>
+  </div>
+    
+    <table border="0" cellpadding="11" cellspacing="0" width="95%">
+    <thead style="background:lightgray">
+        <tr>
+          <th><b>商品ID</b></th>
+          <th><b>商品名</b></th>
+          <th></th>
+          <th><b>税抜価格</b></th>
+          <th><b>ジャンル</b></th>
+          <th></th>
+         <th><b>ステータス</b></th>
+       </tr>
     </thead>
     <tbody>
       <% @items.each do |item| %>
         <tr>
           <td><%= item.id %></td>
-          <td><%= link_to item.name, admin_item_path(item.id) %></td>
-          <td><%= item.price.to_s(:delimited) %></td>
-          <td><%= item.genre.name %></td>
-          <td><%= item.is_active %></td>
+            <td><%= link_to item.name, admin_item_path(item.id) %></td>
+            <td></td>
+            <td><%= item.price.to_s(:delimited) %></td>
+            <td><%= item.genre.name %></td>
+            <td></td>
+            <td><% if item.is_active %>
+              <span style="color:limegreen;">販売中</span>
+            <% else %>
+              <span style="color:grey;">販売停止中</span>
+            <% end %>
+            </td>
         </tr>
       <% end %>
     </tbody>
   </table>
-  <%= paginate @items %>
 </div>
+  <div class="d-flex align-items-center justify-content-center">
+    <div><%= paginate @items %></div>
+  </div>
