--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,29 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<div class ="container">
+  <h3><span style="background-color: silver;">商品詳細</span></h3>
+    <div class ="row">
+      <div class ="col-4">
+        <% if @item.image.attached? %>
+          <%= image_tag @item.image, size: "200x200" %>
+        <% else %>
+          <%= image_tag 'no_image.jpeg', size: "200x200" %>
+        <% end %>
+        </div>
+      <div class ="col-8">
+        <table border="0" cellpadding="11" cellspacing="0" width="60%">
+          <tr><th>商品名</th><td><%= @item.name %></td></tr>
+          <tr><th>商品説明</th><td><%= @item.introduction %></td></tr>
+          <tr><th>ジャンル</th><td><%= @item.genre.name %></td></tr>
+          <tr><th>税込価格(税抜価格)</th><td> <%= (@item.add_tax_price.to_s(:delimited)) %>
+            (<%= (@item.price.to_s(:delimited)) %>円)</td></tr>
+          <tr><th>販売ステータス</th><td><% if @item.is_active %>
+            <strang><span style="color:limegreen;">販売中</span></strong>
+           　  <% else %>
+            <span style="color:gray;">販売停止中</span>
+              <% end %></td></tr>
+        </table>
+      </div>
+    </div>
+</div>
+   <div class="d-flex align-items-center justify-content-center">
+     <div><%= link_to "編集する", edit_admin_item_path(@item.id),class: "btn btn-success" %></div>
+   </div>
