--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,47 @@
-<h1>Public::Orders#index</h1>
-<p>Find me in app/views/public/orders/index.html.erb</p>
+<div class ="container">
+  <h3><span style="background-color: silver;">注文履歴一覧</span></h3>
+  
+  <table border="1" cellpadding="11" cellspacing="0" width="95%">
+  <thead style="background:lightgray">
+   <tr>
+    <th width="10%">注文日</th>
+    <th width="35%">配送先</th>
+    <th width="15%">注文商品</th>
+    <th width="10%">支払金額</th>
+    <th width="10%">ステータス</th>
+    <th width="10%">注文詳細</th>
+   </tr>
+  </thead>
+
+  <tbody style >
+    <% @orders.each do |order| %>
+    <tr>
+      <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
+      <td>
+        〒<%= order.postal_code %><br>
+        <%= order.address %><br>
+        <%= order.name %>
+      </td>
+      <td>
+        <% order.order_details.each do |order_detail| %>
+        <%= order_detail.item.name %>
+        <% end %>
+      </td>
+      <td>
+        <%= (order.total_payment += order.shipping_cost).to_s(:delimited) %>円
+      </td>
+      <td>
+        <%= order.status %>
+      </td>
+      <td>
+        <%= link_to "表示する", order_path(order.id), class: "btn btn-primary" %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+<div class="d-flex align-items-center justify-content-center">
+    <%= paginate @orders %>
+  </div>
+  
+</div>
