--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,2 +1,35 @@
-<h1>Public::Orders#new</h1>
-<p>Find me in app/views/public/orders/new.html.erb</p>
+<div class ="container">
+  <h3><span style="background-color: silver;">注文情報入力</span></h3>
+  <%= form_with url: comfirm_orders_path,model: @order do |f| %>
+    <strong>支払方法</strong><br>
+     <%= f.collection_radio_buttons :payment_method, Order.payment_methods_i18n, :first, :last %><br>
+        
+    <strong>お届け先</strong><br>
+      <%= radio_button_tag :address_option, "0" %>
+      <%= label_tag :address_option, 'ご自身の住所', value: 0 %><br>
+      <%= @address.address %><br>
+      
+      <%= radio_button_tag :address_option, "1" %>
+     <%= label_tag :address_option, '登録済み住所から選択', value: 1 %><br>
+     <%= select_tag :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %><br>
+      <%#= f.collection_select :order_address , current_customer.addresses, :id, :address , :include_blank => "選択してください" %>
+      
+    <%= radio_button_tag :address_option, "2" %>
+     <%= label_tag :address_option, '新しいお届け先', value: 2 %><br>
+     <table border="0" cellpadding="11" cellspacing="0" width="60%">
+      <tr><th>郵便番号(ハイフンなし)</th><td>
+        <%= f.text_field :postal_code, placeholder:"0000000" %>
+      </td></tr>
+      <tr><th>住所</th><td>
+        <%= f.text_field :address, placeholder:"東京都渋谷区代々木神園町0-0",size: 50 %>
+      </td></tr>
+      <tr><th>宛名</th><td>
+        <%= f.text_field :name, placeholder:"令和道子" %>
+      </td></tr>
+    </table>
+    
+  <div class ="container text-center">
+    <%= f.submit "確認画面へ進む",class: "btn btn-primary" %>
+  </div>
+  <% end %>
+</div>
