--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,2 +1,45 @@
-<h1>Public::Orders#sgow</h1>
-<p>Find me in app/views/public/orders/sgow.html.erb</p>
+<div class ="container">
+  <h3><span style="background-color: silver;">注文履歴詳細</span></span></h3>
+      <div class ="row">
+        <div class ="col-8">
+          <a><strong>注文情報</strong></a>
+            <table border="1" cellpadding="11" cellspacing="0" width="100%">
+              <tr><th style="background:lightgray"width="30%">注文日</th></th><td><%= @order.created_at.strftime('%Y/%m/%d') %></td></tr>
+              <tr><th style="background:lightgray">配送先</th><td>〒<%= @order.postal_code %><br><%= @order.address %><br><%= @order.name %></td></tr>
+              <tr><th style="background:lightgray">支払方法</th><td><%= @order.payment_method_i18n %></td></tr>
+              <tr><th style="background:lightgray">ステータス</th><td><%= @order.status %></td></tr>
+            </table>
+          </div>
+          <div class ="col-4">
+            <strong>請求情報</strong>  
+            <table border="1" cellpadding="11" cellspacing="0" width="90%">
+              <tr><th style="background:lightgray"width="30%">商品合計</th></th><td><%= @order.total_payment.to_s(:delimited) %></td></tr>
+              <tr><th style="background:lightgray">配送料</th><td><%= @shipping_cost = 800 %></td></tr>
+              <tr><th style="background:lightgray"><span class="example">ご請求額</span></th><td><%= (@order.total_payment += @shipping_cost).to_s(:delimited) %></td></tr>
+            </table>
+          </div>
+        </div>
+        <strong>注文内容</strong> 
+          <table border="1" cellpadding="11" cellspacing="0" width="80%">
+            <thead style="background:lightgray">
+              <tr>
+                <th>商品</th>
+                <th>単価（税込）</th>
+                <th>個数</th>
+                <th>小計</th>
+              </tr>
+            </thead>
+
+            <tbody style >
+              <% @order_details.each do |order_detail| %>
+              <tr>
+                <td><%= order_detail.item.name %></td>
+                <td><%= order_detail.item.with_tax_price.to_s(:delimited) %></td>
+                <td><%= order_detail.amount %></td>
+                <td><%= order_detail.subtotal.to_s(:delimited) %></td>
+                
+               </tr>
+               <% end %>
+            </tbody>
+          </table>
+  </div> 
