--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,2 +1,58 @@
-<h1>Public::CartItems#index</h1>
-<p>Find me in app/views/public/cart_items/index.html.erb</p>
+<div class ="container">
+  <div class="row">
+    <div class="col-8">
+      <h3><span style="background-color: silver;">ショッピングカート</span></h3>
+    </div>
+    <div class="col-4">
+    <%= link_to "カートを空にする", destroy_all_cart_items_path,method: :delete, class: "btn btn-danger" %>
+    </div>
+  </div>
+  <table border="1" cellpadding="11" cellspacing="0" width="95%">
+  <thead style="background:lightgray">
+   <tr>
+    <th>商品名</th>
+    <th>単価（税込）</th>
+    <th>数量</th>
+    <th>小計</th>
+    <th></th>
+   </tr>
+  </thead>
+
+  <tbody style >
+    <% @cart_items.each do |cart_item| %>
+    <tr>
+      <td><%= image_tag cart_item.item.get_image(60,40) %><%= cart_item.item.name %></td>
+      <td><%= cart_item.item.with_tax_price.to_s(:delimited) %></td>
+      <%= form_with model: cart_item,url: cart_item_path(cart_item.id),method: :patch do |f| %>
+      <td>
+        <%= f.select :amount, [1,2,3,4,5,6,7,8,9,10], :size =>"40",include_blank: cart_item.amount.to_s, class: 'form-control' %>
+        <%= f.submit "変更",class: "btn btn-success" %>
+      </td>
+      <% end %>
+     
+      <td><%= cart_item.subtotal.to_s(:delimited) %></td>
+      <td><%= link_to "削除する", cart_item_path(cart_item.id),class: "btn btn-danger", method: :delete %></td>
+      <% @total +=  cart_item.subtotal %>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+<div class ="row">
+  <div class ="col-9">
+    <%= link_to "買い物を続ける", root_path,class: "btn btn-primary" %>
+  </div>
+  <div class ="col-3">
+    <table border="1" cellpadding="11" cellspacing="0">
+      <tr>
+        <th style="background:lightgray">合計金額</th>
+         <td><%= @total.to_s(:delimited)%></td>
+      </tr>
+    </table>
+  </div>
+</div>
+<div class ="container text-center">
+  <% if @cart_items.any? %>
+  <%= link_to "情報入力に進む", new_order_path, class:"btn btn-success ml-4" %>
+  <% end %>
+</div>
+</div>
