--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,2 +1,33 @@
-<h1>Public::Customers#edit</h1>
-<p>Find me in app/views/public/customers/edit.html.erb</p>
+<div class ="container">
+  <h3><span style="background-color: silver;">会員情報編集</span></h3>
+   <%= form_with model: @customer, url: information_customers_path,method: :patch do |f| %><br>
+  
+    <table border="0" cellpadding="11" cellspacing="0" width="60%">
+      <tr><th>氏名</th><td>
+        <%= f.text_field :last_name, autofocus: true, id:"inputName" %>
+        <%= f.text_field :first_name, autofocus: true, id:"inputName" %>
+      </td></tr>
+      <tr><th>フリガナ</th><td>
+        <%= f.text_field :last_name_kana, autofocus: true, id:"inputName" %>
+        <%= f.text_field :first_name_kana, autofocus: true, id:"inputName" %>
+      </td></tr>
+      <tr><th>郵便番号</th><td>
+        <%= f.text_field :postal_code, autofocus: true, id:"inputpostal_code" %>
+      </td></tr>
+      <tr><th>住所</th><td>
+        <%= f.text_field :address, autofocus: true, id:"address",size: 50 %>
+      </td></tr>
+      <tr><th>電話番号</th><td>
+        <%= f.text_field :telephone_number, autofocus: true, id:"inputTelephone_number" %>
+      </td></tr>
+      <tr><th>メールアドレス</th><td>
+        <%= f.text_field :email, autofocus: true, id:"inputEmail" %>
+      </td></tr>
+    </table>
+     <%= f.submit "編集内容を保存", class: "btn btn-success" %>
+        <%= link_to "退会する",  unsubscribe_customers_path,class: "btn btn-danger" %>
+  <% end %>
+  
+      
+      
+</div>
