--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,55 @@
-<h1>Admin::Orders#show</h1>
-<p>Find me in app/views/admin/orders/show.html.erb</p>
+<h5><span style="background-color: silver;">注文履歴詳細</span></h5>
+
+ <table border="0" cellpadding="11" cellspacing="0" width="60%">
+    <tr><th>購入者</th><td><%= link_to @order.name,admin_customer_path(@order.customer.id) %></td></tr>
+    <tr><th>注文日</th><td><%= @order.created_at.strftime('%Y/%m/%d')  %></td></tr>
+    <tr><th>配送先</th><td>〒<%= @order.postal_code %><%= @order.address  %><br><%= @order.name %></td></tr>
+    <tr><th>支払方法</th><td><%= @order.payment_method %></td></tr>
+    <tr><th>注文ステータス</th><td>
+      <%= form_with model: @order, url: admin_order_path, method: :patch, local: true do |f| %>
+      <%= f.select :status, Order.statuses.keys.map { |k| [t("enums.order.status.#{k}"), k] }, class: "status" %>
+      <%= f.submit "更新" , class: "btn btn-success" %>
+      <% end %>
+    </td></tr>
+  </table>
+  <div class ="row">
+    <div class ="col-8">
+     <table border="0" cellpadding="11" cellspacing="0" width="80%">
+      <thead style="background:lightgray">
+        <tr>
+          <th>商品名</th>
+          <th>単価（税込）</th>
+          <th>数量</th>
+          <th>小計</th>
+          <th>製作ステータス</th>
+        </tr>
+      </thead>
+
+      <tbody style >
+        <% @order_details.each do |order_detail| %>
+          <tr>
+            <td><%= order_detail.item.name %></td>
+            <td><%= order_detail.item.with_tax_price.to_s(:delimited) %></td>
+            <td><%= order_detail.amount %></td>
+            <td><%= order_detail.subtotal.to_s(:delimited) %></td>
+            <td>
+              <!--製作ステータスの記述 orderとorder_detailのコントローラーに記述書いたupdate-->
+              <%= form_with model: order_detail, url:  admin_order_detail_path(order_detail), method: :patch, local: true do |f| %>
+              <%= f.select :production_status, OrderDetail.production_status.keys.map { |k| [t("enums.order_detail.production_status.#{k}"), k] }, class: "production_status" %>
+              <%= f.submit "更新" , class: "btn btn-success" %>
+              <% end %>
+            </td>
+              <% @total +=  order_detail.subtotal %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class ="col-4">
+  <table border="0" cellpadding="11" cellspacing="0" width="60%">
+      <tr><th>商品合計</th><td><%= @order.total_payment.to_s(:delimited) %>円</td></tr>
+      <tr><th>送料</th><td><%= @shipping_cost = 800 %>円</td></tr>
+      <tr><th>請求金額合計</th><td><%= (@order.total_payment += @shipping_cost).to_s(:delimited) %>円</td></tr>
+    </table>
+  </div>
+</div>
