[注文ステータス作成]

--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -4,7 +4,7 @@
     <tr><th>購入者</th><td><%= link_to @order.name,admin_customer_path(@order.customer.id) %></td></tr>
     <tr><th>注文日</th><td><%= @order.created_at.strftime('%Y/%m/%d')  %></td></tr>
     <tr><th>配送先</th><td>〒<%= @order.postal_code %><%= @order.address  %><br><%= @order.name %></td></tr>
-    <tr><th>支払方法</th><td><%= @order.payment_method %></td></tr>
+    <tr><th>支払方法</th><td><%= @order.payment_method_i18n %></td></tr>
     <tr><th>注文ステータス</th><td>
       <%= form_with model: @order, url: admin_order_path, method: :patch, local: true do |f| %>
       <%= f.select :status, Order.statuses.keys.map { |k| [t("enums.order.status.#{k}"), k] }, class: "status" %>
@@ -35,7 +35,7 @@
             <td>
               <!--製作ステータスの記述 orderとorder_detailのコントローラーに記述書いたupdate-->
               <%= form_with model: order_detail, url:  admin_order_detail_path(order_detail), method: :patch, local: true do |f| %>
-              <%= f.select :production_status, OrderDetail.production_status.keys.map { |k| [t("enums.order_detail.production_status.#{k}"), k] }, class: "production_status" %>
+              <%= f.select :making_status, OrderDetail.making_statuses.keys.map { |k| [t("enums.order_detail.making_status.#{k}"), k] }, class: "making_status" %>
               <%= f.submit "更新" , class: "btn btn-success" %>
               <% end %>
             </td>
