[退会機能作成]

--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<div class="container">
+  <div class ="row">
+    <div class ="col-5">
+      <h3><span style="background-color: silver;">会員一覧</span></h3>
+    </div>
+  </div>
+<table border="0" cellpadding="11" cellspacing="0" width="95%">
+    <thead style="background:lightgray">
+      <tr>
+        <th><b>会員ID</b></th>
+        <th><b>氏名</b></th>
+        <th></th>
+        <th></th>
+        <th><b>メールアドレス</b></th>
+        <th><b>ステータス</b></th>
+     </tr>
+  </thead>
+  <tbody>
+    <% @customers.each do |customer| %>
+    <tr>
+      <td><%= customer.id %></td>
+      <td><%= link_to customer.full_name, admin_customer_path(customer.id) %></td>
+      <td></td>
+      <td></td>
+      <td><%= customer.email %></td>
+      <td><% if customer.is_deleted %>
+          <span style="color:grey;">退会</span>
+       <% else %>
+          <span style="color:limegreen;">有効</span>
+      <% end %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+  </table>
+   <div class="d-flex align-items-center justify-content-center">
+    <div><%= paginate @customers %></div>
+  </div>
+  </div>
