--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,30 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+<div class ="container">
+  <h3><span style="background-color: silver;"><%= @customer.full_name %>さんの会員情報編集</span></h3>
+   <%= form_with model: @customer, url: admin_customer_path do |f| %>
+    <table border="0" cellpadding="11" cellspacing="0" width="60%">
+      <tr><th>会員ID</th><td><%= @customer.id %></td></tr>
+      <tr><th>氏名</th><td>
+        <%= f.text_field :last_name, autofocus: true, id:"inputName" %>
+        <%= f.text_field :first_name, autofocus: true, id:"inputName" %>
+      </td></tr>
+      <tr><th>フリナガ</th><td>
+        <%= f.text_field :last_name_kana, autofocus: true, id:"inputName" %>
+        <%= f.text_field :first_name_kana, autofocus: true, id:"inputName" %>
+      </td></tr>
+      <tr><th>郵便番号</th><td><%= f.text_field :postal_code, autofocus: true, id:"inputpostal_code" %></td></tr>
+      <tr><th>住所</th><td><%= f.text_field :address, autofocus: true, id:"address",size: 50 %></td></tr>
+      <tr><th>電話番号</th><td><%= f.text_field :telephone_number, autofocus: true, id:"inputTelephone_number" %></td></tr>
+      <tr><th>メールアドレス</th><td><%= f.text_field :email, autofocus: true, id:"inputEmail" %></td></tr>
+      <tr><th>会員ステータス</th><td>
+        <%= f.radio_button :is_deleted, '1', autofocus: true, id:"inputIs_deleted" %>
+        <%= f.label :is_deleted, '退会', value: 1 %>
+      
+        <%= f.radio_button :is_deleted, '0', autofocus: true, id:"inputIs_deleted" %>
+        <%= f.label :is_deleted, '有効', value: 0 %>
+      </td></tr>
+    </table>
+     <div class="d-flex align-items-center justify-content-center">
+      <%= f.submit "変更を保存", class: "btn btn-success" %>
+     </div>
+  <% end %>
+</div>
