--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,22 @@
-<h1>Admin::Customers#show</h1>
-<p>Find me in app/views/admin/customers/show.html.erb</p>
+<div class="container">
+  <h3><span style="background-color: silver;"><%= @customer.full_name %>さんの会員詳細</span></h3>
+  
+  <table border="0" cellpadding="11" cellspacing="0" width="60%">
+    <tr><th>会員ID</th><td><%= @customer.id %></td></tr>
+    <tr><th>氏名</th><td><%= @customer.full_name %></td></tr>
+    <tr><th>フリナガ</th><td><%= @customer.full_name_kana %></td></tr>
+    <tr><th>郵便番号</th><td><%= @customer.postal_code %></td></tr>
+    <tr><th>住所</th><td><%= @customer.address %></td></tr>
+    <tr><th>電話番号</th><td><%= @customer.telephone_number %></td></tr>
+    <tr><th>メールアドレス</th><td><%= @customer.email %></td></tr>
+    <tr><th>会員ステータス</th><td><% if @customer.is_deleted %>
+        <strang><span style="color:grey;">退会</span></strong>
+      <% else %>
+        <span style="color:limegreen;">有効</span>
+      <% end %></td></tr>
+  </table>
+  <div class="d-flex align-items-center justify-content-center">
+    <div><%= link_to "編集する", edit_admin_customer_path(@customer.id),class: "btn btn-success" %>
+        <%= link_to "注文履歴一覧を見る", admin_root_path(@customer.id),class: "btn btn-primary" %></div>
+    </div>
+</div>
