[レイアウト調整]

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -15,8 +15,9 @@
               </ul>
         </div>
       </div>
-  
-      <div class="col-md-9">
+      <div class ="col-md-1">
+      </div>
+      <div class="col-md-8">
         <div calss ="text">
           <%= image_tag 'no_image.jpeg', size: "600x100" %><br>
           <a>ようこそ、ながのCAKEへ！</a><br>
