[支払い方法修正]

--- a/app/views/public/orders/comfirm.html.erb
+++ b/app/views/public/orders/comfirm.html.erb
@@ -36,7 +36,7 @@
     </div>
     
     <strong>支払方法</strong><br>
-    <%= @order.payment_method %><br>
+    <%= @order.payment_method_i18n %><br>
      
     <strong>お届け先</strong><br>
       <%= @order.postal_code %>
