--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -2,7 +2,7 @@
   <h3><span style="background-color: silver;">注文情報入力</span></h3>
   <%= form_with url: comfirm_orders_path,model: @order do |f| %>
     <strong>支払方法</strong><br>
-     <%= f.collection_radio_buttons :payment_method, Order.payment_methods, :first, :last %><br>
+     <%= f.collection_radio_buttons :payment_method, Order.payment_methods_i18n, :first, :last %><br>
         
     <strong>お届け先</strong><br>
       <%= radio_button_tag :address_option, "0" %>
